mensagem do commit

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.1.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "simple-datatables": "^10.2.0",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
